--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.rrt3ch.tellmetheodds</groupId>
+    <groupId>com.tellmetheodds</groupId>
     <artifactId>odds-parent</artifactId>
     <version>1.0.4-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -12,14 +12,10 @@
     <name>odds-parent</name>
 
     <properties>
-        <version.dropwizard>1.0.4</version.dropwizard>
-        <version.dropwizard-java8>0.9.0-1</version.dropwizard-java8>
-        <version.dropwizard-version.bundle>0.9.2</version.dropwizard-version.bundle>
+        <version.dropwizard>1.0.5</version.dropwizard>
         <version.dropwizard-swagger>1.0.0-1</version.dropwizard-swagger>
-        <version.swagger-annotations>1.5.1-M2</version.swagger-annotations>
-        <version.io.swagger-annotations>1.5.9</version.io.swagger-annotations>
-        <version.maven-jar-plugin>3.0.2</version.maven-jar-plugin>
         <version.maven-compiler-plugin>3.5</version.maven-compiler-plugin>
+        <version.maven-shade-plugin>2.4.3</version.maven-shade-plugin>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <github.maven.repository>file://${user.home}/Documents/source/maven-repository</github.maven.repository>
@@ -39,6 +35,11 @@
                 <artifactId>dropwizard-core</artifactId>
                 <version>${version.dropwizard}</version>
             </dependency>
+            <dependency>
+                <groupId>com.smoketurner</groupId>
+                <artifactId>dropwizard-swagger</artifactId>
+                <version>${version.dropwizard-swagger}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -57,8 +58,25 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>${version.maven-jar-plugin}</version>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${version.maven-shade-plugin}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${mainClass}</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer">
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
